automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,8 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vand\n",
+    "elay\" # \"ART VANDELAY\""
    ]
   },
   {
