automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,8 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vand\n",
-    "elay\" # \"ART VANDELAY\""
+    "\"art vandelay\" # \"ART VANDELAY\""
    ]
   },
   {
